@@ -1,6 +1,6 @@
 Version: $Id$ $Name$
 
-purple (06/04/05)
+purple (06/12/05)
 ---------------------
 + Swapped heading and deltaHeading in spawnStruct (thanks Doodman)
 + Strip the # off names before matching to filters to aid in filter writing
@@ -12,6 +12,8 @@ purple (06/04/05)
 	so they are correct now (thanks Doodman)
 + Added struct for OP_Illusion and a spawnshell handler so that illusions
 	are propagated to the spawn list and the map
++ Filled in some missing races with artificial names not taken from the
+	.exe (thanks uRit1u2CBBA=)
 
 purple (05/18/05)
 ---------------------
